--- a/Lab2/Code/react-app/public/index.html
+++ b/Lab2/Code/react-app/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <title>Stream encryption</title>
   </head>
   <body>
     <div id="root"></div>
